# litterbox-pinocchio

./: .gitignore  COMMIT_SUMMARY.md  Cargo.toml  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  FINAL_REPORT.md  GITHUB-SETUP.md  GITHUB_UPDATE_SUMMARY.md  IMPLEMENTATION_REQUEST.md  INSTALL.md  JUPITER_INTEGRATION.md  LOCAL_TESTING.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_SUMMARY.md  README-TESTING.md  README.md  REPOSITORY-CHECKLIST.md  SETUP.md  TESTING-GUIDE.md  TESTING_SUMMARY.md  TOKEN_INTEGRATION_GUIDE.md  client-example.ts  docker-compose.yml  init-repo.sh  init-simple-keypairs.js  init-with-tokens.js  surfpool-config.yaml  test-multi-deposit.js  test-phase1.js  test-phase2-initialize.js  test-phase2-simple.js  test-phase3-deposit.js  test-runbook.yaml  txtx.yml
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/: check-dependencies.sh  derive-pdas.sh  test-local.sh
src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  processor_minimal.rs  processor_new_init.rs  state.rs  tests.rs  utils.rs
