[package]
name = "litterbox-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
# Gate the SBF entrypoint/allocator/panic-handler symbols behind this feature
# so the crate can be used as a library without duplicate-symbol link errors.
bpf-entrypoint = []
cpi = []

[dependencies]
pinocchio = "=0.9.3"
bytemuck = { version = "1.14", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
